# shooter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  matrix-shooter.pro
src/: asteroid.cpp  asteroid.h  bar.cpp  bar.h  border.cpp  border.h  collidingitem.cpp  collidingitem.h  config.cpp  config.h  hitindicator.cpp  hitindicator.h  laser.cpp  laser.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixscene.cpp  matrixscene.h  missile.cpp  missile.h  player.cpp  player.h  powerup.cpp  powerup.h  wreck.cpp  wreck.h
